# Academy

./: .gitignore  Audit.md  README.md  customization_guide.md  docker-compose.yml  instructions.md  prd.md  task.md
backend/: .env.example  Dockerfile  academy.db  academy.db-journal  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  audit_middleware.py  config.py  dependencies.py  exceptions.py  logging.py  rate_limit.py  redis_cache.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  audit.py  blog.py  booking.py  career.py  category.py  certificate.py  cohort.py  contact.py  course.py  enrollment.py  order.py  organization.py  research.py  role.py  service.py  ticket.py  user.py
backend/app/repositories/: __init__.py  audit_repository.py  blog_repository.py  booking_repository.py  career_repository.py  category_repository.py  certificate_repository.py  cohort_repository.py  contact_repository.py  course_repository.py  enrollment_repository.py  order_repository.py  research_repository.py  service_repository.py  ticket_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  blog.py  booking.py  career.py  category.py  certificate.py  cohort.py  common.py  contact.py  course.py  enrollment.py  order.py  research.py  service.py  ticket.py  user.py
backend/app/services/: __init__.py  auth_service.py  blog_service.py  booking_service.py  career_service.py  category_service.py  (+14 more)
backend/scripts/: migrate_sig.py  seed.py
(+109 files in other folders)
